<resources>
    <string name="app_name">PeerLink</string>
    <string name="app_description">Fast Local File Sharing</string>
    <string name="discover_btn">Discover Devices</string>
    <string name="send_btn">Send Files</string>
    <string name="recieve_btn">Receive Files</string>
    <string name="receive_btn">Receive Files</string>
    <string name="toggle_theme">Toggle Theme</string>
</resources>
